--- a/src/style/style.css
+++ b/src/style/style.css
@@ -23,6 +23,7 @@
   left: 50%;
   bottom: 40%;
   transform: translate(-50%, 50%);
+  box-shadow: 4px 3px 8px #1f1a1a;
 }
 
 .content {
@@ -186,9 +187,9 @@
 /* background */
 .hero{
   position: relative;
-  background-image: url(../assets/hero-pizza.jpg);
+  background-image: url(../assets/pizza2.jpeg);
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -219,11 +220,13 @@ z-index: 0;
 
 /* menu */
 
+
 main{
   position: absolute;
-  top: 80%;
+  top: 75%;
   left: 50%;
   transform: translate(-50%, -50%);
+
 }
 
 .btn-conteiner {
