--- a/src/style/style.css
+++ b/src/style/style.css
@@ -3,16 +3,13 @@
     padding: 0;
     box-sizing: border-box;
 }
-.flip-vertical-fwd {
-	animation: flip-vertical-fwd 0.4s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+
+ul{
+  list-style: none;
 }
-@keyframes flip-vertical-fwd {
-  0% {
-    transform: translateZ(0) rotateY(0);
-  }
-  100% {
-    transform: translateZ(160px) rotateY(180deg);
-  }
+
+a{
+  text-decoration: none;
 }
 /*  */
 .card {
@@ -80,7 +77,7 @@
 }
 .rotate {
    transition: transform 0.3s;
-  transform: rotateY(180deg);
+   transform: rotateY(180deg);
 }
 
 @keyframes rotation_481 {
@@ -204,11 +201,22 @@ width: 100%;
 height: 100%;
 background: linear-gradient(
     to right,
-    rgba(0, 146, 70, 0.3),
+    rgba(0, 146, 70, 0.5),
     rgba(255, 255, 255, 0.3),
-    rgba(206, 43, 55, 0.3));
+    rgba(206, 43, 55, 0.5));
 z-index: 0;
 }
+
+#Mobilenav{
+  background: linear-gradient(
+    to right,
+    rgba(0, 146, 70, 0.2),
+    rgba(255, 255, 255, 0.1),
+    rgba(206, 43, 55, 0.2));
+    transition: 0.5s;
+    z-index: 4;
+}
+
 
 
 
@@ -223,17 +231,20 @@ z-index: 0;
 
 main{
   position: absolute;
-  top: 75%;
-  left: 50%;
+  top: 50%;
+  left: 70%;
   transform: translate(-50%, -50%);
-
+}
+@media(max-width:768px){
+main{
+  left:95%
+}
 }
 
 .btn-conteiner {
   display: flex;
   justify-content: center;
   --color-text: #9ee5fa;
-  --color-background: #353535;
   --color-outline: #9ee5fa80;
   --color-shadow: #00000080;
 }
@@ -337,6 +348,27 @@ main{
 
 
 #clickMe{
-      background: linear-gradient(80deg, #22c55e, #ffffff9a, #ef4444);
-
+background-color: #ff2233;
 }
+
+#nav{
+  background-color: #1515156e;
+  z-index: 2;
+}
+
+@media(max-width:768px){
+  #nav{
+    background-color: transparent;
+  }
+}
+
+.blur{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #00000041;
+  backdrop-filter: blur(5px);
+  z-index: 3;
+}
+
