--- a/src/style/style.css
+++ b/src/style/style.css
@@ -184,7 +184,7 @@ a{
 /* background */
 .hero{
   position: relative;
-  background-image: url(../assets/pizza2.jpeg);
+  background-image: url(../assets/pizza2.Webp);
   width: 100%;
   height: 100vh;
   background-size: cover;
