--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,368 +1,1 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-ul{
-  list-style: none;
-}
-
-a{
-  text-decoration: none;
-}
-/*  */
-.card {
-  overflow: visible;
-  width: 290px;
-  height: 454px;
-  position: absolute;
-  left: 50%;
-  bottom: 50%;
-  transform: translate(-50%, 50%);
-  box-shadow: 4px 3px 8px #1f1a1a;
-}
-
-.content {
-  width: 100%;
-  height: 100%;
-  transform-style: preserve-3d;
-  transition: transform 300ms;
-  box-shadow: 0px 0px 10px 1px #000000ee;
-  border-radius: 5px;
-}
-
-.front, .back {
-  background-color: #151515;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  border-radius: 5px;
-  overflow: hidden;
-}
-
-.back {
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-  display: flex;
-  align-items: center;
-  overflow: hidden;
-}
-
-.back::before {
-  position: absolute;
-  content: ' ';
-  display: block;
-  width: 160px;
-  height: 160%;
-  background: linear-gradient(90deg, transparent, #ff9966, #ff9966, #ff9966, #ff9966, transparent);
-  animation: rotation_481 5000ms infinite linear;
-}
-
-.back-content {
-  position: absolute;
-  width: 99%;
-  height: 99%;
-  background-color: #151515;
-  border-radius: 5px;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 30px;
-}
-
-@keyframes rotation_481 {
-  0% {
-    transform: rotateZ(0deg);
-  }
-
-  0% {
-    transform: rotateZ(360deg);
-  }
-}
-
-.rotate {
-  transform: rotateY(180deg);
-}
-
-.front {
-  transform: rotateY(180deg);
-}
-
-.front .front-content {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.front-content .badge {
-  background-color: #00000055;
-  padding: 2px 10px;
-  border-radius: 10px;
-  backdrop-filter: blur(2px);
-  width: fit-content;
-}
-
-.description {
-  box-shadow: 0px 0px 10px 5px #00000088;
-  width: 100%;
-  padding: 10px;
-  background-color: #00000099;
-  backdrop-filter: blur(5px);
-  border-radius: 5px;
-}
-
-.title {
-  font-size: 11px;
-  max-width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
-.title p {
-  width: 50%;
-}
-
-.card-footer {
-  color: #ffffff88;
-  margin-top: 5px;
-  font-size: 8px;
-}
-
-.front .img img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
-}
-
-
-#bottom {
-  background-color: #ff8866;
-  left: 50px;
-  top: 0px;
-  width: 150px;
-  height: 150px;
-  animation-delay: -800ms;
-}
-
-#right {
-  background-color: #ff2233;
-  left: 160px;
-  top: -80px;
-  width: 30px;
-  height: 30px;
-  animation-delay: -1800ms;
-}
-
-@keyframes floating {
-  0% {
-    transform: translateY(0px);
-  }
-
-  50% {
-    transform: translateY(10px);
-  }
-
-  100% {
-    transform: translateY(0px);
-  }
-}
-
-
-/* background */
-.hero{
-  position: relative;
-  background-image: url(../assets/pizza2.webp);
-  width: 100%;
-  height: 100vh;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.hero::after{
-position: absolute;
-content: "";
-left: 0;
-top: 0;
-width: 100%;
-height: 100%;
-background: linear-gradient(
-    to right,
-    rgba(0, 146, 70, 0.5),
-    rgba(255, 255, 255, 0.3),
-    rgba(206, 43, 55, 0.5));
-z-index: 0;
-}
-
-#Mobilenav{
-    transition: 0.5s;
-    z-index: 20;
-}
-
-
-
-
-
-.hero > *{
-  z-index: 1;
-}
-
-
-/* menu */
-
-
-main{
-  position: absolute;
-  top: 50%;
-  left: 70%;
-  transform: translate(-50%, -50%);
-}
-@media(max-width:768px){
-main{
-  left:95%
-}
-}
-
-.btn-conteiner {
-  display: flex;
-  justify-content: center;
-  --color-text: #9ee5fa;
-  --color-outline: #9ee5fa80;
-  --color-shadow: #00000080;
-}
-
-.btn-content {
-  display: flex;
-  align-items: center;
-  padding: 0px 3px;
-  text-decoration: none;
-  font-family: "Poppins", sans-serif;
-  font-size: 25px;
-  color: var(--color-text);
-  background: var(--color-background);
-  transition: 1s;
-  border-radius: 100px;
-  box-shadow: 0 0 0.2em 0 var(--color-background);
-}
-
-.btn-content:hover,
-.btn-content:focus {
-  transition: 0.5s;
-  -webkit-animation: btn-content 1s;
-  animation: btn-content 1s;
-  outline: 0.1em solid transparent;
-  outline-offset: 0.2em;
-  box-shadow: 0 0 0.4em 0 var(--color-background);
-}
-
-.btn-content .icon-arrow {
-  transition: 0.5s;
-  margin-right: 0px;
-  transform: scale(0.6);
-}
-
-.btn-content:hover .icon-arrow {
-  transition: 0.5s;
-  margin-right: 25px;
-}
-
-.icon-arrow {
-  width: 20px;
-  margin-left: 15px;
-  position: relative;
-  top: 6%;
-}
-
-/* SVG */
-#arrow-icon-one {
-  transition: 0.4s;
-  transform: translateX(-60%);
-}
-
-#arrow-icon-two {
-  transition: 0.5s;
-  transform: translateX(-30%);
-}
-
-.btn-content:hover #arrow-icon-three {
-  animation: color_anim 1s infinite 0.2s;
-}
-
-.btn-content:hover #arrow-icon-one {
-  transform: translateX(0%);
-  animation: color_anim 1s infinite 0.6s;
-}
-
-.btn-content:hover #arrow-icon-two {
-  transform: translateX(0%);
-  animation: color_anim 1s infinite 0.4s;
-}
-
-/* SVG animations */
-@keyframes color_anim {
-  0% {
-    fill: white;
-  }
-
-  50% {
-    fill: var(--color-background);
-  }
-
-  100% {
-    fill: #9ee5fa;
-  }
-}
-
-/* Button animations */
-@-webkit-keyframes btn-content {
-  0% {
-    outline: 0.2em solid var(--color-background);
-    outline-offset: 0;
-  }
-}
-
-@keyframes btn-content {
-  0% {
-    outline: 0.2em solid var(--color-background);
-    outline-offset: 0;
-  }
-}
-
-
-#clickMe{
-background-color: #ff2233;
-}
-
-#nav{
-  background-color: #1515156e;
-  z-index: 2;
-}
-
-@media(max-width:768px){
-  #nav{
-    background-color: transparent;
-  }
-}
-
-#cardimg {
-  transition: transform 0.4s cubic-bezier(0.77, 0, 0.175, 1), opacity 0.5s ease;
-}
-
-#cardimg.flip {
-  transform: translateX(-100%);
-  opacity: 0;
-} 
-
-
+.back,.back-content,.back::before,.card,.front{position:absolute}.back,.back-content,.front{background-color:#151515}.back,.back-content,.content,.description,.front{border-radius:5px}.btn-content,a{text-decoration:none}#clickMe,#right{background-color:#f23}*{margin:0;padding:0;box-sizing:border-box}ul{list-style:none}.card{overflow:visible;width:290px;height:454px;left:50%;bottom:50%;transform:translate(-50%,50%);box-shadow:4px 3px 8px #1f1a1a}.back,.content,.front{width:100%;height:100%}.content{transform-style:preserve-3d;transition:transform .3s;box-shadow:0 0 10px 1px #000000ee}.back,.front{backface-visibility:hidden;-webkit-backface-visibility:hidden;overflow:hidden}.back{justify-content:center;display:flex;align-items:center;overflow:hidden}.back::before{content:' ';display:block;width:160px;height:160%;background:linear-gradient(90deg,transparent,#f96,#f96,#f96,#f96,transparent);animation:5s linear infinite rotation_481}.front .front-content,.front .img img,.hero::after{height:100%;position:absolute}.back-content{width:99%;height:99%;color:#fff;display:flex;flex-direction:column;justify-content:center;align-items:center;gap:30px}.hero,.icon-arrow{position:relative}@keyframes rotation_481{0%{transform:rotateZ(360deg)}}.front,.rotate{transform:rotateY(180deg)}.front .front-content{width:100%;padding:10px;display:flex;flex-direction:column;justify-content:space-between}.front-content .badge{background-color:#00000055;padding:2px 10px;border-radius:10px;backdrop-filter:blur(2px);width:fit-content}.description{box-shadow:0 0 10px 5px #00000088;width:100%;padding:10px;background-color:#00000099;backdrop-filter:blur(5px)}.title{font-size:11px;max-width:100%;display:flex;justify-content:space-between}.title p{width:50%}.card-footer{color:#ffffff88;margin-top:5px;font-size:8px}.front .img img{width:100%;object-fit:cover;object-position:center}#bottom{background-color:#f86;left:50px;top:0;width:150px;height:150px;animation-delay:-.8s}#right{left:160px;top:-80px;width:30px;height:30px;animation-delay:-1.8s}@keyframes floating{0%,100%{transform:translateY(0)}50%{transform:translateY(10px)}}#Mobilenav{transition:.5s;z-index:20}.hero{height:100vh}.hero>*{z-index:1}#nav{background-color:#1515156e;z-index:2}@media(max-width:768px){main{left:95%}#nav{background-color:transparent}}#cardimg{transition:transform .4s cubic-bezier(.77, 0, .175, 1),opacity .5s}#cardimg.flip{transform:translateX(-100%);opacity:0}
